tests/baselines/reference/overloadingOnConstantsInImplementation.errors.txt
==== tests/cases/compiler/overloadingOnConstantsInImplementation.ts (4 errors) ====
    function foo(a: 'hi', x: string);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! overloadingOnConstantsInImplementation.ts(1,1): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    function foo(a: 'hi', x: string);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! overloadingOnConstantsInImplementation.ts(2,1): error TS2144: Duplicate overload signature for 'foo'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! overloadingOnConstantsInImplementation.ts(2,1): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    function foo(a: 'hi', x: any) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! overloadingOnConstantsInImplementation.ts(3,1): error TS2163: Overload signature implementation cannot use specialized type.